deploy/overlay/kubernetes/03-mysql-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jig-mysql
  namespace: jig-workshop-worker
  labels:
    app: jig-mysql
    app.kubernetes.io/name: jig-mysql
    app.kubernetes.io/part-of: jig-workshop-worker
spec:
  selector:
    matchLabels:
      app: jig-mysql
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: jig-mysql
    spec:
      containers:
        - image: mysql:5.6
          name: jig-mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: jig-mysql-pv-claim
